# baseball-tix-scraper

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  PLANS.md  README.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  HANDOFF.md  HOME_ASSISTANT.md  OPERATIONS.md  PRODUCT.md  SOURCES.md  TESTING.md
scripts/: health.sh  logs.sh  update.sh  validate.sh
src/mlb_ticket_tracker/: __init__.py  cli.py  config.py  health.py  logging.py  models.py  ports.py  publisher.py  schedule.py  service.py  state.py  teams.py  utils.py  validation.py
src/mlb_ticket_tracker/providers/: base.py  seatgeek.py  ticketmaster.py  vivid.py
tests/: conftest.py  fakes.py  test_health.py  test_publisher.py  test_schedule.py  test_service.py  test_smoke.py  test_state.py  test_ticketmaster.py  test_validation.py
