[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-home-ticket-tracker"
version = "0.1.0"
description = "Track MLB home game ticket prices and publish them to Home Assistant via MQTT."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Matt Telles" }
]
dependencies = [
  "httpx>=0.28,<1",
  "paho-mqtt>=2.1,<3",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.13,<3",
  "structlog>=25.4,<26",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.18,<2",
  "pytest>=8.4,<9",
  "pytest-httpx>=0.35,<1",
  "ruff>=0.14,<1",
]

[project.scripts]
mlb-ticket-tracker = "mlb_ticket_tracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
  "UP",
  "N",
  "S",
]
ignore = [
  "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S106"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["paho.mqtt.*"]
ignore_missing_imports = true
